# near-optimal-election

./: .gitignore  CMakeLists.txt  README.md  make.sh
lib/: election_compare.cpp  election_compare.hpp  frac.cpp  frac.hpp  func.cpp  func.hpp  max_deque.cpp  max_deque.hpp  simulation_setup.hpp  sq2.cpp  sq2.hpp
plot/: batch.asy  final.asy  graphic.asy  parameter.asy
run/: batch.cpp  graphic.cpp  parameter.cpp
